force-app/main/default/objects/Deposit_Trend__c.object
<CustomObject>
    <label>存款趨勢</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>年份</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>存款趨勢</relationshipLabel>
        <relationshipName>Deposit_Trend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>May_Last_Year__c</fullName>
        <label>去年5月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Last_Year__c</fullName>
        <label>去年7月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Last_Year__c</fullName>
        <label>去年6月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Last_Year__c</fullName>
        <label>去年4月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Last_Year__c</fullName>
        <label>去年3月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Last_Year__c</fullName>
        <label>去年8月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Current_Year__c</fullName>
        <label>今年5月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Last_Year__c</fullName>
        <label>去年1月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Current_Year__c</fullName>
        <label>今年7月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Current_Year__c</fullName>
        <label>今年6月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Last_Year__c</fullName>
        <label>去年10月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Current_Year__c</fullName>
        <label>今年4月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Last_Year__c</fullName>
        <label>去年12月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Last_Year__c</fullName>
        <label>去年2月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Current_Year__c</fullName>
        <label>今年3月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Last_Year__c</fullName>
        <label>去年11月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Current_Year__c</fullName>
        <label>今年8月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Last_Year__c</fullName>
        <label>去年9月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Private_Info__c</fullName>
        <label>客戶非公開資訊</label>
        <referenceTo>Account_Private_Info__c</referenceTo>
        <relationshipLabel>存款趨勢</relationshipLabel>
        <relationshipName>Deposit_Trend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>January_Current_Year__c</fullName>
        <label>今年1月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Current_Year__c</fullName>
        <label>今年10月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Current_Year__c</fullName>
        <label>今年12月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Current_Year__c</fullName>
        <label>今年2月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Current_Year__c</fullName>
        <label>今年11月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Current_Year__c</fullName>
        <label>今年9月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Trend_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>存款趨勢外鍵</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>May_The_Year_Before_Last_Year__c</fullName>
        <label>前年5月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_The_Year_Before_Last_Year__c</fullName>
        <label>前年7月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_The_Year_Before_Last_Year__c</fullName>
        <label>前年6月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_The_Year_Before_Last_Year__c</fullName>
        <label>前年4月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_The_Year_Before_Last_Year__c</fullName>
        <label>前年3月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_The_Year_Before_Last_Year__c</fullName>
        <label>前年8月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_The_Year_Before_Last_Year__c</fullName>
        <label>前年1月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_The_Year_Before_Last_Year__c</fullName>
        <label>前年10月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_The_Year_Before_Last_Year__c</fullName>
        <label>前年12月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_The_Year_Before_Last_Year__c</fullName>
        <label>前年2月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_The_Year_Before_Last_Year__c</fullName>
        <label>前年11月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_The_Year_Before_Last_Year__c</fullName>
        <label>前年9月</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Year</fullName>
        <columns>Year__c</columns>
        <columns>January_Last_Year__c</columns>
        <columns>February_Last_Year__c</columns>
        <columns>March_Last_Year__c</columns>
        <columns>April_Last_Year__c</columns>
        <columns>May_Last_Year__c</columns>
        <columns>June_Last_Year__c</columns>
        <columns>July_Last_Year__c</columns>
        <columns>August_Last_Year__c</columns>
        <columns>September_Last_Year__c</columns>
        <columns>October_Last_Year__c</columns>
        <columns>November_Last_Year__c</columns>
        <columns>December_Last_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2023</value>
        </filters>
        <label>去年</label>
    </listViews>
    <listViews>
        <fullName>Current_Year</fullName>
        <columns>Year__c</columns>
        <columns>January_Current_Year__c</columns>
        <columns>February_Current_Year__c</columns>
        <columns>March_Current_Year__c</columns>
        <columns>April_Current_Year__c</columns>
        <columns>May_Current_Year__c</columns>
        <columns>June_Current_Year__c</columns>
        <columns>July_Current_Year__c</columns>
        <columns>August_Current_Year__c</columns>
        <columns>September_Current_Year__c</columns>
        <columns>October_Current_Year__c</columns>
        <columns>November_Current_Year__c</columns>
        <columns>December_Current_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2024</value>
        </filters>
        <label>今年</label>
    </listViews>
</CustomObject>